--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,13 @@
               .tar.gz file
             </a>
           {% endif %}
-
+            
+          <ul>
+            <li><a href="#ui-for-react">React</a></li>
+            <li><a href="#ui-for-vue">Vue</a></li>
+            <li><a href="#ui-for-angular">Angular</a></li>
+          </ul>
+          
           {% if site.github.is_project_page %}
             <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
           {% endif %}
