--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,9 +56,10 @@
                 <li class="side-list-item"><a href="#ui-for-react">React</a></li>
                 <li class="side-list-item"><a href="#ui-for-vue">Vue</a></li>
                 <li class="side-list-item"><a href="#ui-for-angular">Angular</a></li>
+                <li class="side-list-item"><a href="#others">Others</a></li>
              </ul>
           </details>
-          
+          <br/>
           {% if site.github.is_project_page %}
             <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
           {% endif %}
