--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -306,6 +306,11 @@ ul {
   padding-left: 20px;
 }
 
+.side-list-item {
+  font-weight: 600;
+  font-style: bold;
+  }
+
 ol {
   list-style-position: inside;
   list-style: decimal;
