--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -306,6 +306,10 @@ ul {
   padding-left: 20px;
 }
 
+.side-list {
+  list-style: none;
+}
+
 .side-list-item {
   font-weight: 600;
   font-style: bold;
